<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">send</string>
    <string name="contact_uri">content://com.android.contacts/data/phones</string>
    <string name="idtxthint">用户名</string>
    <string name="pwdtxthint">密码</string>
    <string name="loginbtntext">登录</string>
    <string name="mailtxthint">邮箱</string>
    <string name="forgot_pwd">忘记密码？</string>
    <string name="sign_up">注册新用户</string>
    <string name="record_pwd">记住密码</string>
    <string name="reset_pwd">重置密码</string>
    <string name="mail_for_reset">请输入邮箱</string>
    <string name="not_login_but_use">不登陆直接使用</string>
    <string name="login_out">注销登录</string>
</resources>
