<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:orientation="vertical"
              android:layout_width="match_parent"
              android:background="@color/background"
              android:layout_height="match_parent">
    <RelativeLayout android:layout_width="fill_parent"
                    android:layout_height="45dp"
                    android:background="#ffffe6c6"
            >
        <ImageView android:layout_width="wrap_content"
                   android:layout_height="wrap_content"
                   android:src="@drawable/back_to_last"
                   android:layout_centerVertical="true"
                   android:id="@+id/signUpRet"
                />
        <TextView android:layout_width="wrap_content"
                  android:layout_height="wrap_content"
                  android:text="@string/sign_up"
                  android:layout_centerInParent="true"
                />

    </RelativeLayout>

    <EditText android:layout_width="fill_parent"
              android:layout_height="wrap_content"
              android:layout_marginTop="10dp"
              android:background="@drawable/edit_style"
              android:hint="@string/idtxthint"
              android:id="@+id/etSignUserName"
            />
    <EditText android:layout_width="fill_parent"
              android:layout_height="wrap_content"
              android:layout_marginTop="10dp"
              android:background="@drawable/edit_style"
              android:id="@+id/etSignMail"
              android:hint="@string/mailtxthint"/>
    <EditText android:layout_width="fill_parent"
              android:layout_height="wrap_content"
              android:layout_marginTop="10dp"
              android:background="@drawable/edit_style"
              android:inputType="textPassword"
              android:id="@+id/etSignPassword"
              android:hint="@string/pwdtxthint"
            />
    <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent" android:layout_gravity="right">
        <Button android:layout_width="347dp" android:layout_height="wrap_content"
                android:background="@drawable/login_button_style"
                android:text="@string/sign_up"
                android:layout_marginTop="10dp"
                android:id="@+id/bSinUp"
                android:layout_alignParentTop="true" android:layout_centerHorizontal="true"/>
    </RelativeLayout>


</LinearLayout>