<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:orientation="vertical"
              android:layout_width="fill_parent"
              android:layout_height="fill_parent"
              android:background="@color/background"
        >
    <ImageView
            android:layout_width="132dp"
            android:layout_height="132dp"
            android:layout_gravity="center"
            android:layout_marginTop="68dp"
            android:src="@drawable/send" />

    <LinearLayout
            android:id="@+id/login_linearLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="15dp"
            android:layout_marginTop="8dp"
            android:orientation="vertical" >

        <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/login_input"
                android:orientation="vertical" >

            <LinearLayout
                    android:id="@+id/userId_LinearLayout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="right"
                    android:orientation="horizontal" >

                <!-- android:ems="10"表示EditText内最多只显示10个字符，超出不显示 -->
                <!-- android:singleLine="true"表示不能全部显示时，后面用“…”来表示 -->
                <EditText
                        android:id="@+id/login_edtId"
                        android:layout_width="0dp"
                        android:layout_height="44dp"
                        android:layout_weight="1"
                        android:background="@null"
                        android:ems="10"
                        android:hint="@string/idtxthint"
                        android:paddingLeft="15dp"
                        android:paddingRight="15dp"
                        android:singleLine="true"
                        android:textColorHint="#999999"
                        android:textSize="18sp" >

                    <requestFocus />
                </EditText>

                <ImageView
                        android:id="@+id/login_more_user"
                        android:layout_width="wrap_content"
                        android:layout_height="44dp"
                        android:layout_marginRight="15dp"
                        android:layout_marginTop="5dp"
                        android:src="@drawable/login_more_up" />
            </LinearLayout>

            <!-- 横线  -->
            <View
                    android:layout_width="match_parent"
                    android:layout_height="0.5dp"
                    android:background="#CACDD1" />

            <EditText
                    android:id="@+id/login_edtPwd"
                    android:layout_width="match_parent"
                    android:layout_height="44dp"
                    android:background="@null"
                    android:hint="@string/pwdtxthint"
                    android:inputType="textPassword"
                    android:paddingLeft="15dp"
                    android:paddingRight="0dp"
                    android:singleLine="true"
                    android:textColorHint="#999999"
                    android:textSize="18sp" />
        </LinearLayout>

        <Button
                android:id="@+id/login_btnLogin"
                android:layout_width="match_parent"
                android:layout_height="45dp"
                android:layout_marginTop="20dp"
                android:background="@drawable/login_button_style"
                android:text="@string/loginbtntext"
                android:textColor="#FFFFFF"
                android:textSize="19sp" />
        <LinearLayout android:layout_width="match_parent"
                      android:layout_height="wrap_content"
                      android:orientation="horizontal"
                >
            <CheckBox
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/record_pwd"
                    android:id="@+id/checkBox"/>
            <Button android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@drawable/sign_up"
                    android:layout_marginLeft="70dp"
                    android:text="@string/sign_up"
                    android:id="@+id/bt_sign_up"
                    />

        </LinearLayout>
    </LinearLayout>

    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:orientation="vertical" >
    </LinearLayout>

    <LinearLayout android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="15dp"
                  android:orientation="horizontal"
            >
        <TextView
                android:id="@+id/login_txtForgotPwd"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="15dp"
                android:text="@string/forgot_pwd"
                android:textColor="#0079FF"
                android:textSize="18sp" />
        <TextView android:layout_width="wrap_content"
                  android:layout_height="fill_parent"
                  android:text="@string/not_login_but_use"
                  android:id="@+id/not_login_but_use"
                  android:textColor="#0079FF"
                  android:layout_gravity="end"
                  android:layout_marginStart="120dp"
                  android:textSize="18sp" />
    </LinearLayout>


</LinearLayout>